<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true"
    android:background="@drawable/grad_bg"
    tools:context="com.example.login.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/imgView_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/logo"
            android:scaleType="fitCenter"/>
        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_below="@id/imgView_logo">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="@color/white"
                android:textSize="30dp"/>

            <LinearLayout
                android:id="@+id/liniry"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_login"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed-light"
                        android:text="@string/username"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15dp"/>

                    <EditText
                        android:id="@+id/Username_u"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textSize="15dp"
                        android:textColor="@color/white"
                        android:layout_marginTop="15dp"
                        android:fontFamily="sans-serif-condensed-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:background="@drawable/et_bg"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    android:layout_height="wrap_content">
                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed-light"
                        android:text="@string/password"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15dp"/>

                    <EditText
                        android:id="@+id/Password_u"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textSize="15dp"
                        android:textColor="@color/white"
                        android:layout_marginTop="15dp"
                        android:fontFamily="sans-serif-condensed-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:inputType="textPassword"
                        android:background="@drawable/et_bg"/>


                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/View_me"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="56dp"
                android:layout_marginLeft="56dp"
                android:layout_marginTop="270dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="sans-serif-condensed-medium"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="85dp"
                android:layout_marginLeft="85dp"
                android:layout_marginTop="362dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.462"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.122"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/signout"
                android:layout_width="wrap_content"
                android:layout_height="97dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="Sign Out"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
                app:layout_constraintVertical_bias="0.122"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_marginTop="50dp"
                android:id="@+id/textView"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/fb_login_bn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="56dp"
                android:layout_marginLeft="56dp"
                android:layout_marginTop="329dp" />


        </RelativeLayout>>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rellay2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/vie_Signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/gradStart"
            android:fontFamily="sans-serif"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/vie_Forget"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/gradStart"
            android:fontFamily="sans-serif"
            android:text="@string/forget_password"
            android:textAllCaps="true"
            android:textColor="@color/white"/>

    </RelativeLayout>
</RelativeLayout>